fix menu and sort-by alignment

--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ p.banner-container > span:nth-child(1)
 .region-primary-menu ul#superfish-arf-main-menu > li:nth-last-child(5),
 .region-primary-menu ul#superfish-exm-main-menu > li:nth-last-child(2),
 .region-primary-menu ul#superfish-nef-main-menu > li:nth-last-child(5),
-.region-primary-menu ul#superfish-kch-main-menu > li:nth-last-child(4),
+.region-primary-menu ul#superfish-kch-main-menu > li:nth-last-child(5),
 .region-primary-menu ul#superfish-main > li:nth-last-child(5)
 {
   flex-grow: 2;
@@ -436,6 +436,11 @@ div.upper-pager
   object-fit: contain;
 }
 */
+
+/* KCH sort on new line */
+#views-exposed-form-a3d-kch-search-index-kch-search .form-item-sort-by {
+    grid-column-start: 1;
+}
 
 /* KCH advanced typology options */
 
